raffia/tests/error/scss/at-rule/mixin/double-commas-in-middle.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `,`
  ┌─ double-commas-in-middle.scss:1:30
  │
1 │ @mixin double-comma-error($a,,$b) {
  │                              ^


